--- a/styles.css
+++ b/styles.css
@@ -107,7 +107,7 @@ body.dark .bot-message {
     border: 2px solid #88c999;
 }
 
-
+/* mensaje de usuarios */
 .user-message {
     background-color: #dcedc8;
     color: #33691e;
